[gd_scene load_steps=4 format=3 uid="uid://wi7f7gpq6uvd"]

[ext_resource type="Script" path="res://Birds/Bird_instance.gd" id="1_bsvv8"]
[ext_resource type="Texture2D" uid="uid://byrrsipt1ydag" path="res://assets/allBirdsHitbox3.png" id="2_qhwqd"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jq08t"]
size = Vector2(200, 268.333)

[node name="Bird_instance" type="Node2D"]
script = ExtResource("1_bsvv8")

[node name="Image" type="Sprite2D" parent="."]
scale = Vector2(0.13, 0.13)
texture = ExtResource("2_qhwqd")

[node name="Symbol" type="RichTextLabel" parent="."]
offset_left = -135.0
offset_top = 66.0
offset_right = 135.0
offset_bottom = 121.0
mouse_filter = 1
theme_override_font_sizes/normal_font_size = 40
theme_override_font_sizes/bold_font_size = 40
theme_override_font_sizes/italics_font_size = 40
theme_override_font_sizes/bold_italics_font_size = 40
theme_override_font_sizes/mono_font_size = 40
bbcode_enabled = true
text = "[center]?[/center]"
fit_content = true

[node name="Hitbox" type="Area2D" parent="."]

[node name="Rectangle" type="CollisionShape2D" parent="Hitbox"]
position = Vector2(5, -40.5)
scale = Vector2(0.6, 0.6)
shape = SubResource("RectangleShape2D_jq08t")

[node name="ColorRect" type="ColorRect" parent="Hitbox/Rectangle"]
visible = false
offset_left = -100.0
offset_top = -134.0
offset_right = 100.0
offset_bottom = 134.0
mouse_filter = 2
color = Color(0.890196, 0, 0.117647, 0.45098)

[connection signal="mouse_entered" from="Hitbox" to="." method="_on_mouse_entered_hitbox"]
[connection signal="mouse_exited" from="Hitbox" to="." method="_on_mouse_exited_hitbox"]
